<resources>
    <string name="app_name">Sleepy Song</string>
    <string name="app_enabled">ENABLED</string>
    <string name="app_disabled">DISABLED</string>
    <string name="app_stop_button">STOP</string>
    <string name="app_start_button">START</string>
    <string name="app_count_minutes">Time: %1$d minutes</string>
    <string name="menu_about">About</string>
    <string name="menu_play_song">Play the song</string>
    <string name="menu_stop_song">Stop the song</string>
    <string name="dialog_about_title">About</string>
    <string name="dialog_about_message">App version v0.5\n\nCoded by Adam Kadar @ kadaradam\n2016</string>
    <string name="dialog_about_button">Cancel</string>
    <string name="music_stop_time">Music will %1$s at %2$s</string>
    <string name="countdown_text">Time left: %1$02d:%2$02d:%3$02d</string>
</resources>
