<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="tk.kadaradam.sleepysong.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_count_minutes"
        android:layout_above="@+id/timeSlider"
        android:layout_centerHorizontal="true"
        android:id="@+id/progressText" />

    <SeekBar
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/timeSlider"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:max="120"
        android:indeterminate="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_disabled"
        android:id="@+id/statusText"
        android:layout_above="@+id/progressText"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="77dp"
        android:textColor="#ff0000" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_start_button"
        android:id="@+id/toggleButton"
        android:layout_below="@+id/timeSlider"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="86dp" />

</RelativeLayout>
